# CppHacks

./: .gitignore  README.md
include/: overload.hpp  serializable_deserializable.hpp  serialization.hpp  transparent_invoke.hpp  universal_function_pointer.hpp
include/algorithms/: algorithms.hpp  find.hpp  sort.hpp
include/algorithms/string/: is_palindrome.hpp  string_algo.hpp
include/data_structures/: array.hpp  data_structures.hpp  forward_list.hpp
include/serialization/: serialization.hpp
include/serialization/type_traits/: serialization_type_traits.hpp
include/utils/: concepts.hpp  coroutine_helpers.hpp  cpp_assert.hpp  memory_location_check.hpp  overload.hpp  sequence_generator.hpp  transparent_invoke.hpp  universal_function_pointer.hpp  utils.hpp
include/utils/coro/: coro_NN_generator.hpp  coro_generator_object.hpp  coro_helpers.hpp  coro_seq_generator.hpp
include/utils/math/: compile_time_factorial.hpp  compile_time_power.hpp  math.hpp
include/utils/network/: defines_and_constants.hpp  network.hpp  tcp_client.hpp  tcp_server.hpp
include/utils/network/impl/tcp_client/: tcp_client_impl.hpp
include/utils/network/impl/tcp_server/: tcp_server_impl.hpp
include/utils/smart_pointers/: scoped_ptr.hpp  smart_pointers.hpp
src/: CMakeLists.txt  main.cpp
src/tests/serialization/typetraits_test/: typetraits_test.hpp
src/tests/serialization/typetraits_test/impl/: Deserializable_typetraits_test.hpp  MainObject_typetraits_test.hpp  SerializableDeserializable_typetraits_test.hpp  Serializable_typetraits_test.hpp
